// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runs \`npx expo prebuild --template <github-url>\` 1`] = `
[
  "App.js",
  "android/.gitignore",
  "android/app/build.gradle",
  "android/app/debug.keystore",
  "android/app/proguard-rules.pro",
  "android/app/src/debug/AndroidManifest.xml",
  "android/app/src/main/AndroidManifest.xml",
  "android/app/src/main/java/com/example/minimal/MainActivity.kt",
  "android/app/src/main/java/com/example/minimal/MainApplication.kt",
  "android/app/src/main/res/drawable/ic_launcher_background.xml",
  "android/app/src/main/res/drawable/rn_edit_text_material.xml",
  "android/app/src/main/res/mipmap-hdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-hdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-mdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-mdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-xhdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-xxhdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp",
  "android/app/src/main/res/values-night/colors.xml",
  "android/app/src/main/res/values/colors.xml",
  "android/app/src/main/res/values/strings.xml",
  "android/app/src/main/res/values/styles.xml",
  "android/build.gradle",
  "android/gradle.properties",
  "android/gradle/wrapper/gradle-wrapper.jar",
  "android/gradle/wrapper/gradle-wrapper.properties",
  "android/gradlew",
  "android/gradlew.bat",
  "android/settings.gradle",
  "app.json",
  "bun.lockb",
  "ios/.gitignore",
  "ios/.xcode.env",
  "ios/Podfile",
  "ios/Podfile.properties.json",
  "ios/githubtemplateprebuild.xcodeproj/project.pbxproj",
  "ios/githubtemplateprebuild.xcodeproj/project.xcworkspace/contents.xcworkspacedata",
  "ios/githubtemplateprebuild.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist",
  "ios/githubtemplateprebuild.xcodeproj/xcshareddata/xcschemes/githubtemplateprebuild.xcscheme",
  "ios/githubtemplateprebuild/AppDelegate.h",
  "ios/githubtemplateprebuild/AppDelegate.mm",
  "ios/githubtemplateprebuild/Images.xcassets/AppIcon.appiconset/App-Icon-1024x1024@1x.png",
  "ios/githubtemplateprebuild/Images.xcassets/AppIcon.appiconset/Contents.json",
  "ios/githubtemplateprebuild/Images.xcassets/Contents.json",
  "ios/githubtemplateprebuild/Images.xcassets/SplashScreenBackground.colorset/Contents.json",
  "ios/githubtemplateprebuild/Info.plist",
  "ios/githubtemplateprebuild/SplashScreen.storyboard",
  "ios/githubtemplateprebuild/Supporting/Expo.plist",
  "ios/githubtemplateprebuild/githubtemplateprebuild-Bridging-Header.h",
  "ios/githubtemplateprebuild/githubtemplateprebuild.entitlements",
  "ios/githubtemplateprebuild/main.m",
  "ios/githubtemplateprebuild/noop-file.swift",
  "metro.config.js",
  "package.json",
]
`;

exports[`runs \`npx expo prebuild --template expo-template-bare-minimum@50.0.43\` 1`] = `
[
  "App.js",
  "android/.gitignore",
  "android/app/build.gradle",
  "android/app/debug.keystore",
  "android/app/proguard-rules.pro",
  "android/app/src/debug/AndroidManifest.xml",
  "android/app/src/main/AndroidManifest.xml",
  "android/app/src/main/java/com/example/minimal/MainActivity.kt",
  "android/app/src/main/java/com/example/minimal/MainApplication.kt",
  "android/app/src/main/res/drawable/rn_edit_text_material.xml",
  "android/app/src/main/res/drawable/splashscreen.xml",
  "android/app/src/main/res/drawable/splashscreen_image.png",
  "android/app/src/main/res/mipmap-hdpi/ic_launcher.png",
  "android/app/src/main/res/mipmap-hdpi/ic_launcher_round.png",
  "android/app/src/main/res/mipmap-mdpi/ic_launcher.png",
  "android/app/src/main/res/mipmap-mdpi/ic_launcher_round.png",
  "android/app/src/main/res/mipmap-xhdpi/ic_launcher.png",
  "android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.png",
  "android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png",
  "android/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.png",
  "android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png",
  "android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.png",
  "android/app/src/main/res/values-night/colors.xml",
  "android/app/src/main/res/values/colors.xml",
  "android/app/src/main/res/values/strings.xml",
  "android/app/src/main/res/values/styles.xml",
  "android/build.gradle",
  "android/gradle.properties",
  "android/gradle/wrapper/gradle-wrapper.jar",
  "android/gradle/wrapper/gradle-wrapper.properties",
  "android/gradlew",
  "android/gradlew.bat",
  "android/settings.gradle",
  "app.json",
  "bun.lockb",
  "ios/.gitignore",
  "ios/.xcode.env",
  "ios/Podfile",
  "ios/Podfile.properties.json",
  "ios/basicprebuild.xcodeproj/project.pbxproj",
  "ios/basicprebuild.xcodeproj/project.xcworkspace/contents.xcworkspacedata",
  "ios/basicprebuild.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist",
  "ios/basicprebuild.xcodeproj/xcshareddata/xcschemes/basicprebuild.xcscheme",
  "ios/basicprebuild/AppDelegate.h",
  "ios/basicprebuild/AppDelegate.mm",
  "ios/basicprebuild/Images.xcassets/AppIcon.appiconset/App-Icon-1024x1024@1x.png",
  "ios/basicprebuild/Images.xcassets/AppIcon.appiconset/Contents.json",
  "ios/basicprebuild/Images.xcassets/Contents.json",
  "ios/basicprebuild/Images.xcassets/SplashScreen.imageset/Contents.json",
  "ios/basicprebuild/Images.xcassets/SplashScreen.imageset/splashscreen.png",
  "ios/basicprebuild/Images.xcassets/SplashScreenBackground.colorset/Contents.json",
  "ios/basicprebuild/Images.xcassets/SplashScreenBackground.imageset/Contents.json",
  "ios/basicprebuild/Images.xcassets/SplashScreenBackground.imageset/background.png",
  "ios/basicprebuild/Info.plist",
  "ios/basicprebuild/SplashScreen.storyboard",
  "ios/basicprebuild/Supporting/Expo.plist",
  "ios/basicprebuild/basicprebuild-Bridging-Header.h",
  "ios/basicprebuild/basicprebuild.entitlements",
  "ios/basicprebuild/main.m",
  "ios/basicprebuild/noop-file.swift",
  "metro.config.js",
  "package.json",
]
`;

exports[`runs \`npx expo prebuild\` 1`] = `
[
  "App.js",
  "android/.gitignore",
  "android/app/build.gradle",
  "android/app/debug.keystore",
  "android/app/proguard-rules.pro",
  "android/app/src/debug/AndroidManifest.xml",
  "android/app/src/main/AndroidManifest.xml",
  "android/app/src/main/java/com/example/minimal/MainActivity.kt",
  "android/app/src/main/java/com/example/minimal/MainApplication.kt",
  "android/app/src/main/res/drawable/ic_launcher_background.xml",
  "android/app/src/main/res/drawable/rn_edit_text_material.xml",
  "android/app/src/main/res/mipmap-hdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-hdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-mdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-mdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-xhdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-xxhdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.webp",
  "android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.webp",
  "android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp",
  "android/app/src/main/res/values-night/colors.xml",
  "android/app/src/main/res/values/colors.xml",
  "android/app/src/main/res/values/strings.xml",
  "android/app/src/main/res/values/styles.xml",
  "android/build.gradle",
  "android/gradle.properties",
  "android/gradle/wrapper/gradle-wrapper.jar",
  "android/gradle/wrapper/gradle-wrapper.properties",
  "android/gradlew",
  "android/gradlew.bat",
  "android/settings.gradle",
  "app.json",
  "bun.lockb",
  "ios/.gitignore",
  "ios/.xcode.env",
  "ios/Podfile",
  "ios/Podfile.properties.json",
  "ios/basicprebuild.xcodeproj/project.pbxproj",
  "ios/basicprebuild.xcodeproj/project.xcworkspace/contents.xcworkspacedata",
  "ios/basicprebuild.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist",
  "ios/basicprebuild.xcodeproj/xcshareddata/xcschemes/basicprebuild.xcscheme",
  "ios/basicprebuild/AppDelegate.h",
  "ios/basicprebuild/AppDelegate.mm",
  "ios/basicprebuild/Images.xcassets/AppIcon.appiconset/App-Icon-1024x1024@1x.png",
  "ios/basicprebuild/Images.xcassets/AppIcon.appiconset/Contents.json",
  "ios/basicprebuild/Images.xcassets/Contents.json",
  "ios/basicprebuild/Images.xcassets/SplashScreenBackground.colorset/Contents.json",
  "ios/basicprebuild/Info.plist",
  "ios/basicprebuild/SplashScreen.storyboard",
  "ios/basicprebuild/Supporting/Expo.plist",
  "ios/basicprebuild/basicprebuild-Bridging-Header.h",
  "ios/basicprebuild/basicprebuild.entitlements",
  "ios/basicprebuild/main.m",
  "ios/basicprebuild/noop-file.swift",
  "metro.config.js",
  "package.json",
]
`;
